otra prueba de NPM

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,3 @@
-// Body
-$body-bg: #aaafff;
-
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
@@ -17,3 +14,10 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+/* Cambios de DEUX*/
+// Tabla
+$table-hover-bg: green;
+// Body
+$body-bg: #f0f0f0;
+$primary: #e0a800;
