--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,7 +17,7 @@ $cyan: #6cb2eb;
 
 /* Cambios de DEUX*/
 // Tabla
-$table-hover-bg: green;
+$table-hover-bg: #ffedbd;
 // Body
 $body-bg: #f0f0f0;
 $primary: #e0a800;
