--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2330,7 +2330,7 @@ pre code {
   width: 100%;
   height: calc(1.6em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-size: 0.9rem;
+  font-size: larger;
   font-weight: 400;
   line-height: 1.6;
   color: #495057;
@@ -2436,7 +2436,7 @@ select.form-control:focus::-ms-value {
   width: 100%;
   padding: 0.375rem 0;
   margin-bottom: 0;
-  font-size: 0.9rem;
+  font-size: larger;
   line-height: 1.6;
   color: #212529;
   background-color: transparent;
@@ -4109,7 +4109,7 @@ input[type=button].btn-block {
           align-items: center;
   padding: 0.375rem 0.75rem;
   margin-bottom: 0;
-  font-size: 0.9rem;
+  font-size: larger;
   font-weight: 400;
   line-height: 1.6;
   color: #495057;
@@ -4349,7 +4349,7 @@ input[type=button].btn-block {
   width: 100%;
   height: calc(1.6em + 0.75rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
-  font-size: 0.9rem;
+  font-size: larger;
   font-weight: 400;
   line-height: 1.6;
   color: #495057;
