--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,10 @@
 
 /* Cambios de DEUX*/
 
+.comentario {
+  font-size: larger !important;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
