JS - Cambios tabla de incidencias y arreglos padding-x input

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,8 +23,8 @@ $body-bg: #f0f0f0;
 $primary: #e0a800;
 
 // Input
-$input-font-size: larger;
+$input-btn-padding-x: .375rem;
 
 .comentario{
-    font-size: $input-font-size !important;
+    font-size: larger !important;
 }
