JS - Ahora los técnicos pueden fichar y cuando tienen una incidencia pueden ir a ella directamente. Los técnicos pueden ver sus incidencias.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+// $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -16,6 +16,9 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 /* Cambios de DEUX*/
+// Fuente
+$font-family-sans-serif: 'Heebo', sans-serif;
+
 // Tabla
 $table-hover-bg: #ffedbd;
 // Body
