--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,13 +1,12 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
+@import "incidencias";
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.colapsarDiv{
+.colapsarDiv {
     height: 0px;
     display: none;
 }
